<resources>
    <string name="app_name">Industrial Park</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="googleplus">google plus</string>
    <string name="twitter">twitter</string>
    <string name="facebook">facebook</string>
    <string name="titleText">Davidson County Industrial Park</string>
    <string name="countySeal">county seal</string>
    <string name="credits">App Created By: Larry Thompson</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_businesses">Businesses</string>
    <string name="google">google plus</string>
    <string name="titleText2">Information</string>
    <string name="infoText">The Davidson County Industrial Park is a new facility invisioned by the county commissioner board in 2016.  Not
    only does it bring jobs back into the community, but the complex itself is a sleek and sophisticated monument for Davidson County.
    With new businesses signing up every day, the total potential for growth is limitless.  If you, or anyone you know is interested
    in applying for office space please contact us using the "Businesses" link on the home page.</string>
    <string name="parkSign">Industrial Park Sign</string>
    <string name="titleText3">Location</string>
    <string name="locationImage">location image</string>
    <string name="locationText">Located at 1332 Belmont Drive just outside of Lexington, NC.  This rural area is a perfect backdrop
    to the modern styling and elegance of Davidson Country Industrial Park.  With a facility of over 300 Acres, there is more than
    enough room to accommodate the numerous businesses that have signed up. </string>
    <string name="googleMaps">google maps</string>
    <string name="titleText4">Businesses</string>
    <string name="logoText">company logos</string>
    <string name="contactText">Click the button to contact us!</string>
    <string name="sendEmail">Send Email</string>
    <string name="infoWelcomeText">Our complex is already home to many different businesses!</string>

</resources>
