<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.student.industrialpark.businesses"
    android:background="#ffffff">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView3"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:src="@drawable/countyseal"
        android:contentDescription="@string/countySeal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/titleText4"
        android:id="@+id/textView5"
        android:textSize="25sp"
        android:paddingTop="30dp"
        android:textColor="#8F0922"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="700dp"
        android:layout_height="150dp"
        android:id="@+id/imageView6"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logos"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/logoText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactText"
        android:id="@+id/textView6"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_above="@+id/sendEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendEmail"
        android:id="@+id/sendEmail"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoWelcomeText"
        android:id="@+id/textView7"
        android:layout_below="@+id/imageView6"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textAlignment="center" />
</RelativeLayout>
