<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffff">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/seal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:src="@drawable/countyseal"
        android:contentDescription="@string/countySeal" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/titleText"
        android:id="@+id/titleText"
        android:layout_alignTop="@+id/seal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="25sp"
        android:layout_alignBottom="@+id/seal"
        android:paddingTop="18dp"
        android:textColor="#8F0922"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:id="@+id/list"
        android:background="#98BFFF"
        android:textColor="#ffffff"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:layout_above="@+id/credits"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/credits"
        android:id="@+id/credits"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:textColor="#000000"
        android:background="#98BFFF"
        android:paddingLeft="15dp"
        android:paddingTop="8dp" />

    <ImageView
        android:layout_width="700dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/seal"
        android:src="@drawable/titleimage"
        android:layout_marginTop="5dp"
        android:maxWidth="700dp" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/googleplus"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/list"
        android:layout_alignEnd="@+id/list"
        android:contentDescription="@string/google"
        android:cropToPadding="false"
        android:background="@drawable/google" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/facebook"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/googleplus"
        android:layout_toStartOf="@+id/googleplus"
        android:background="@drawable/facebook"
        android:contentDescription="facebook"
        android:layout_marginRight="5dp" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/twitter"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/facebook"
        android:layout_toStartOf="@+id/facebook"
        android:background="@drawable/twitter"
        android:adjustViewBounds="false"
        android:layout_marginRight="5dp"
        android:contentDescription="twitter" />


</RelativeLayout>
